@@ -4,18 +4,25 @@ import interfaz.MapaPanel;
 import interfaz.PanelPrincipal;
 import modelo.edificio.Edificio;
 import modelo.edificio.Piso;
+import modelo.elementos.Sala;
 import modelo.navegacion.Punto;
 import modelo.navegacion.Ruta;
 import persistencia.CargadorEdificios;
 
 import java.util.ArrayList;
+import java.util.List;
+import java.util.stream.Collectors;
 
 public class ControladorPanel {
 
     private final Edificio edificio;
     private final Navegador navegador;
     private final PanelPrincipal ventana;
+
     private int pisoActual;
+    private Sala salaDestino;
+    private Punto puntoOrigenUsuario;
+    private ArrayList<Ruta> rutaCompleta = new ArrayList<>(); // NUEVO: guarda la ruta total
 
     public ControladorPanel(PanelPrincipal ventana) {
         try {
@@ -28,33 +35,28 @@ public class ControladorPanel {
         this.pisoActual = 1;
     }
 
-    public void iniciarMapa() {
+    public void iniciarMapa(boolean necesitaAscensor) {
         Piso pisoInicial = edificio.getPiso(pisoActual);
-        Punto destino = getDestinoDePiso(pisoActual);
-        Punto origen = new Punto(destino.getX(), destino.getY(), pisoInicial);
-        ArrayList<Ruta> rutas = navegador.calcularRutaCompleta(origen, destino, false);
-        Ruta ruta = rutas.isEmpty() ? new Ruta() : rutas.get(0);
+        Ruta ruta = new Ruta(); // Ruta vacía por defecto
+
+        if (salaDestino != null) {
+            Punto destino = salaDestino.getEntradas().getFirst();
+            Punto origen = destino; // este valor se utilizaria si se agrega gps al sistema
+
+            puntoOrigenUsuario = origen;
+
+            ArrayList<Ruta> rutas = navegador.calcularRutaCompleta(origen, destino, necesitaAscensor);
+            ruta = rutas.isEmpty() ? new Ruta() : rutas.getFirst();
+        }
 
         ventana.iniciarMapa(pisoInicial, ruta, this);
         ventana.actualizarBotonesPiso(pisoActual, edificio.getPisos().size());
     }
 
-    public void manejarClicEnMapa(int x, int y, Piso piso) {
-        Punto origen = new Punto(x, y, piso);
-        Punto destino = getDestinoDePiso(piso.getNumero());
-        ArrayList<Ruta> rutas = navegador.calcularRutaCompleta(origen, destino, false);
-        if (!rutas.isEmpty()) {
-            MapaPanel panel = (MapaPanel) ventana.getContentPane().getComponent(0); // Asume que solo hay uno
-            panel.actualizarDatos(piso, rutas.get(0));
-        } else {
-            System.out.println("❌ No se encontró ruta desde el punto seleccionado.");
-        }
-    }
 
-    private Punto getDestinoDePiso(int numeroPiso) {
-        if (numeroPiso == 1) return new Punto(10, 10, edificio.getPiso(1));
-        if (numeroPiso == 2) return new Punto(5, 5, edificio.getPiso(2));
-        return new Punto(0, 0, edificio.getPiso(1)); // fallback
+    public void manejarClicEnMapa(int x, int y, Piso piso) {
+        puntoOrigenUsuario = new Punto(x, y, piso);
+        recalcularRuta();
     }
 
     public void cambiarPiso(int delta) {
@@ -65,14 +67,52 @@ public class ControladorPanel {
         }
 
         pisoActual = nuevoPiso;
-
         Piso piso = edificio.getPiso(pisoActual);
-        Punto destino = getDestinoDePiso(pisoActual);
-        Punto origen = new Punto(destino.getX(), destino.getY(), piso);
-        ArrayList<Ruta> rutas = navegador.calcularRutaCompleta(origen, destino, false);
-        Ruta ruta = rutas.isEmpty() ? new Ruta() : rutas.get(0);
 
-        ventana.iniciarMapa(piso, ruta, this); // 🔁 Reutilizamos iniciarMapa de PanelPrincipal
+        Ruta ruta = obtenerTramoParaPisoActual();
+
+        ventana.iniciarMapa(piso, ruta, this);
         ventana.actualizarBotonesPiso(pisoActual, edificio.getPisos().size());
+    }
+
+    public void setSalaDestino(String nombreSala) {
+        this.salaDestino = edificio.getPisos().stream()
+                .flatMap(p -> p.getSalas().stream())
+                .filter(s -> s.getNombre().equals(nombreSala))
+                .findFirst()
+                .orElseThrow();
+    }
+
+    public List<String> getTodasLasSalas() {
+        return edificio.getPisos().stream()
+                .flatMap(p -> p.getSalas().stream())
+                .map(Sala::getNombre)
+                .collect(Collectors.toList());
+    }
+
+    private void recalcularRuta() {
+        if (puntoOrigenUsuario != null && salaDestino != null) {
+            rutaCompleta = navegador.calcularRutaCompleta(
+                    puntoOrigenUsuario,
+                    salaDestino.getEntradas().get(0),
+                    false
+            );
+            if (!rutaCompleta.isEmpty()) {
+                Ruta ruta = obtenerTramoParaPisoActual();
+                MapaPanel panel = (MapaPanel) ventana.getContentPane().getComponent(0);
+                panel.actualizarDatos(edificio.getPiso(pisoActual), ruta);
+            }
+        }
+    }
+
+    // NUEVO: filtra el tramo de la ruta correspondiente al piso actual
+    private Ruta obtenerTramoParaPisoActual() {
+        Ruta tramo = new Ruta();
+        for (Ruta r : rutaCompleta) {
+            if (!r.getPuntos().isEmpty() && r.getPuntos().getFirst().getPiso().getNumero() == pisoActual) {
+                return r;
+            }
+        }
+        return tramo; // ruta vacía si no hay tramo en ese piso
     }
 }
